fix line break in LineSeparator

--- a/src/stylesheets/components/LineSeparator.module.scss
+++ b/src/stylesheets/components/LineSeparator.module.scss
@@ -18,6 +18,7 @@
   text-align: center;
   font-weight: bold;
   display: -webkit-flex;
+  white-space: nowrap;
 }
 
 .arrow {
